basic layout no js yet

--- a/index.html
+++ b/index.html
@@ -28,107 +28,108 @@
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
     </header>
+
     <div class="container">
       <!-- Timeblocks go here -->
       
       <!-- 9am -->
-      <row>
-        <div id="calendar-time">
+      <div class="row min-vh-25 no-gutters">
+        <div class="col-1">
           <h4>9AM</h4>
         </div>
-        <div id="put-text-here"></div>
-        <div id="how-to-save">
-          <button></button>
+        <div class="col-10 bg-success border "></div>
+        <div class="col-1 border">
+          <button class="btn btn-primary btn-block">SAVE</button>
         </div>
-      </row>
+      </div>
 
       <!-- 10am -->
-      <row>
-        <div id="calendar-time">
+      <div class="row min-vh-25 no-gutters">
+        <div class="col-1 border">
           <h4>10AM</h4>
         </div>
-        <div id="put-text-here"></div>
-        <div id="how-to-save">
-          <button></button>
+        <div class="col-10 bg-success border "></div>
+        <div class="col-1 border">
+          <button class="btn btn-primary btn-block">SAVE</button>
         </div>
-      </row>
+      </div>
 
       <!-- 11am -->
-      <row>
-        <div id="calendar-time">
+      <div class="row min-vh-25 no-gutters">
+        <div class="col-1 border">
           <h4>11AM</h4>
         </div>
-        <div id="put-text-here"></div>
-        <div id="how-to-save">
-          <button></button>
+        <div class="col-10 bg-success border "></div>
+        <div class="col-1 border">
+          <button class="btn btn-primary btn-block">SAVE</button>
         </div>
-      </row>
+      </div>
 
       <!-- 12pm -->
-      <row>
-        <div id="calendar-time">
+      <div class="row min-vh-25 no-gutters">
+        <div class="col-1 border">
           <h4>12PM</h4>
         </div>
-        <div id="put-text-here"></div>
-        <div id="how-to-save">
-          <button></button>
+        <div class="col-10 bg-success border "></div>
+        <div class="col-1 border">
+          <button class="btn btn-primary btn-block">SAVE</button>
         </div>
-      </row>
+      </div>
 
       <!-- 1pm -->
-      <row>
-        <div id="calendar-time">
+      <div class="row min-vh-25 no-gutters">
+        <div class="col-1 border">
           <h4>1PM</h4>
         </div>
-        <div id="put-text-here"></div>
-        <div id="how-to-save">
-          <button></button>
+        <div class="col-10 bg-success border "></div>
+        <div class="col-1 border">
+          <button class="btn btn-primary btn-block">SAVE</button>
         </div>
-      </row>
+      </div>
 
       <!-- 2pm -->
-      <row>
-        <div id="calendar-time">
+      <div class="row min-vh-25 no-gutters">
+        <div class="col-1 border">
           <h4>2PM</h4>
         </div>
-        <div id="put-text-here"></div>
-        <div id="how-to-save">
-          <button></button>
+        <div class="col-10 bg-success border "></div>
+        <div class="col-1 border">
+          <button class="btn btn-primary btn-block">SAVE</button>
         </div>
-      </row>
+      </div>
 
       <!-- 3pm -->
-      <row>
-        <div id="calendar-time">
+      <div class="row min-vh-25 no-gutters">
+        <div class="col-1 border">
           <h4>3PM</h4>
         </div>
-        <div id="put-text-here"></div>
-        <div id="how-to-save">
-          <button></button>
+        <div class="col-10 bg-success border "></div>
+        <div class="col-1 border">
+          <button class="btn btn-primary btn-block">SAVE</button>
         </div>
-      </row>
+      </div>
 
       <!-- 4pm -->
-      <row>
-        <div id="calendar-time">
+      <div class="row min-vh-25 no-gutters">
+        <div class="col-1 border">
           <h4>4PM</h4>
         </div>
-        <div id="put-text-here"></div>
-        <div id="how-to-save">
-          <button></button>
+        <div class="col-10 bg-success border "></div>
+        <div class="col-1 border">
+          <button class="btn btn-primary btn-block">SAVE</button>
         </div>
-      </row>
+      </div>
 
       <!-- 5pm -->
-      <row>
-        <div id="calendar-time">
+      <div class="row min-vh-25 no-gutters">
+        <div class="col-1 border">
           <h4>5PM</h4>
         </div>
-        <div id="put-text-here"></div>
-        <div id="how-to-save">
-          <button></button>
+        <div class="col-10 bg-success border "></div>
+        <div class="col-1 border">
+          <button class="btn btn-primary btn-block">SAVE</button>
         </div>
-      </row>
+      </div>
 
     </div>
 
