date added to top

--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
         <div class="col-1">
           <h4>9AM</h4>
         </div>
-        <div class="col-10 bg-success border "></div>
+        <div class="col-10 bg-success border ">
+          <p class="to-do-box"></p>
+        </div>
         <div class="col-1 border">
           <button class="btn btn-primary btn-block">SAVE</button>
         </div>
@@ -48,7 +50,9 @@
         <div class="col-1 border">
           <h4>10AM</h4>
         </div>
-        <div class="col-10 bg-success border "></div>
+        <div class="col-10 bg-success border ">
+          <p class="to-do-box"></p>
+        </div>
         <div class="col-1 border">
           <button class="btn btn-primary btn-block">SAVE</button>
         </div>
@@ -59,7 +63,9 @@
         <div class="col-1 border">
           <h4>11AM</h4>
         </div>
-        <div class="col-10 bg-success border "></div>
+        <div class="col-10 bg-success border ">
+          <p class="to-do-box"></p>
+        </div>
         <div class="col-1 border">
           <button class="btn btn-primary btn-block">SAVE</button>
         </div>
@@ -70,7 +76,9 @@
         <div class="col-1 border">
           <h4>12PM</h4>
         </div>
-        <div class="col-10 bg-success border "></div>
+        <div class="col-10 bg-success border ">
+          <p class="to-do-box"></p>
+        </div>
         <div class="col-1 border">
           <button class="btn btn-primary btn-block">SAVE</button>
         </div>
@@ -81,7 +89,9 @@
         <div class="col-1 border">
           <h4>1PM</h4>
         </div>
-        <div class="col-10 bg-success border "></div>
+        <div class="col-10 bg-success border ">
+          <p class="to-do-box"></p>
+        </div>
         <div class="col-1 border">
           <button class="btn btn-primary btn-block">SAVE</button>
         </div>
@@ -92,7 +102,9 @@
         <div class="col-1 border">
           <h4>2PM</h4>
         </div>
-        <div class="col-10 bg-success border "></div>
+        <div class="col-10 bg-success border ">
+          <p class="to-do-box"></p>
+        </div>
         <div class="col-1 border">
           <button class="btn btn-primary btn-block">SAVE</button>
         </div>
@@ -103,7 +115,9 @@
         <div class="col-1 border">
           <h4>3PM</h4>
         </div>
-        <div class="col-10 bg-success border "></div>
+        <div class="col-10 bg-success border ">
+          <p class="to-do-box"></p>
+        </div>
         <div class="col-1 border">
           <button class="btn btn-primary btn-block">SAVE</button>
         </div>
@@ -114,7 +128,9 @@
         <div class="col-1 border">
           <h4>4PM</h4>
         </div>
-        <div class="col-10 bg-success border "></div>
+        <div class="col-10 bg-success border ">
+          <p class="to-do-box"></p>
+        </div>
         <div class="col-1 border">
           <button class="btn btn-primary btn-block">SAVE</button>
         </div>
@@ -125,7 +141,9 @@
         <div class="col-1 border">
           <h4>5PM</h4>
         </div>
-        <div class="col-10 bg-success border "></div>
+        <div class="col-10 bg-success border ">
+          <p class="to-do-box"></p>
+        </div>
         <div class="col-1 border">
           <button class="btn btn-primary btn-block">SAVE</button>
         </div>
@@ -135,5 +153,6 @@
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="./assets/javascript/script.js"></script>
   </body>
 </html>
