--- a/index.html
+++ b/index.html
@@ -37,24 +37,24 @@
         <div class="col-1">
           <h4>9AM</h4>
         </div>
-        <div class="col-10 bg-success border ">
-          <p class="to-do-box"></p>
+        <div id="9am" class="col-10 bg-success border ">
+          <textarea class="to-do-box"></textarea>
         </div>
         <div class="col-1 border">
-          <button class="btn btn-primary btn-block">SAVE</button>
+          <button id="save" class="btn btn-primary btn-block">SAVE</button>
         </div>
       </div>
 
       <!-- 10am -->
-      <div class="row min-vh-25 no-gutters">
+      <div class="row min-vh-25F no-gutters">
         <div class="col-1 border">
           <h4>10AM</h4>
         </div>
-        <div class="col-10 bg-success border ">
-          <p class="to-do-box"></p>
+        <div id="10am" class="col-10 bg-success border ">
+          <textarea class="to-do-box"></textarea>
         </div>
         <div class="col-1 border">
-          <button class="btn btn-primary btn-block">SAVE</button>
+          <button id="save" class="btn btn-primary btn-block">SAVE</button>
         </div>
       </div>
 
@@ -63,11 +63,11 @@
         <div class="col-1 border">
           <h4>11AM</h4>
         </div>
-        <div class="col-10 bg-success border ">
-          <p class="to-do-box"></p>
+        <div id="11am" class="col-10 bg-success border ">
+          <textarea class="to-do-box"></textarea>
         </div>
         <div class="col-1 border">
-          <button class="btn btn-primary btn-block">SAVE</button>
+          <button id="save" class="btn btn-primary btn-block">SAVE</button>
         </div>
       </div>
 
@@ -76,11 +76,11 @@
         <div class="col-1 border">
           <h4>12PM</h4>
         </div>
-        <div class="col-10 bg-success border ">
-          <p class="to-do-box"></p>
+        <div id="12pm" class="col-10 bg-success border ">
+          <textarea class="to-do-box"></textarea>
         </div>
         <div class="col-1 border">
-          <button class="btn btn-primary btn-block">SAVE</button>
+          <button id="save" class="btn btn-primary btn-block">SAVE</button>
         </div>
       </div>
 
@@ -89,11 +89,11 @@
         <div class="col-1 border">
           <h4>1PM</h4>
         </div>
-        <div class="col-10 bg-success border ">
-          <p class="to-do-box"></p>
+        <div id="1pm" class="col-10 bg-success border ">
+          <textarea class="to-do-box"></textarea>
         </div>
         <div class="col-1 border">
-          <button class="btn btn-primary btn-block">SAVE</button>
+          <button id="save" class="btn btn-primary btn-block">SAVE</button>
         </div>
       </div>
 
@@ -102,11 +102,11 @@
         <div class="col-1 border">
           <h4>2PM</h4>
         </div>
-        <div class="col-10 bg-success border ">
-          <p class="to-do-box"></p>
+        <div id="2pm" class="col-10 bg-success border ">
+          <textarea class="to-do-box"></textarea>
         </div>
         <div class="col-1 border">
-          <button class="btn btn-primary btn-block">SAVE</button>
+          <button id="save" class="btn btn-primary btn-block">SAVE</button>
         </div>
       </div>
 
@@ -115,11 +115,11 @@
         <div class="col-1 border">
           <h4>3PM</h4>
         </div>
-        <div class="col-10 bg-success border ">
-          <p class="to-do-box"></p>
+        <div id="3pm" class="col-10 bg-success border ">
+          <textarea class="to-do-box"></textarea>
         </div>
         <div class="col-1 border">
-          <button class="btn btn-primary btn-block">SAVE</button>
+          <button id="save" class="btn btn-primary btn-block">SAVE</button>
         </div>
       </div>
 
@@ -128,11 +128,11 @@
         <div class="col-1 border">
           <h4>4PM</h4>
         </div>
-        <div class="col-10 bg-success border ">
-          <p class="to-do-box"></p>
+        <div id="4pm" class="col-10 bg-success border ">
+          <textarea class="to-do-box"></textarea>
         </div>
         <div class="col-1 border">
-          <button class="btn btn-primary btn-block">SAVE</button>
+          <button id="save" class="btn btn-primary btn-block">SAVE</button>
         </div>
       </div>
 
@@ -141,11 +141,11 @@
         <div class="col-1 border">
           <h4>5PM</h4>
         </div>
-        <div class="col-10 bg-success border ">
-          <p class="to-do-box"></p>
+        <div id="5pm" class="col-10 bg-success border ">
+          <textarea class="to-do-box"></textarea>
         </div>
         <div class="col-1 border">
-          <button class="btn btn-primary btn-block">SAVE</button>
+          <button id="save" class="btn btn-primary btn-block">SAVE</button>
         </div>
       </div>
 
